# pythle

./: CHANGELOG.md  MANIFEST.in  README.md  setup.cfg
.github/workflows/: pytester-cov.yml
src/project_name/: __init__.py
src/pythle/: __init__.py  cli.py  guess.py  load_wordlist.py  player_stats.py  pythle.py
src/wordle/: __init__.py  wordle.py
tests/: test_cli.py  test_guess.py  test_main.py  test_player_stats.py  test_pythle.py  test_wordle.py
