[metadata]
name = python-wordle
version = attr: project_name.__version__
author = Tom Gooding
description = A terminal-based version of the popular word-guessing game Wordle, built with Python. Created as my first GitHub project! 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TomJGooding/python-wordle
project_urls =
    Bug Tracker = https://github.com/TomJGooding/python-wordle/labels/bug
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src